--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,7 +3,7 @@
 
 <div class="card text-center">
   <div class="card-body">
-    <h1>Welcome To Class Votes</h1>
+    <h1>Welcome To Changes</h1>
     <p>This is an example Django polling app</p>
     <a class="btn btn-dark" href="{% url 'polls:index' %}">
         View Available Polls</a
