--- a/templates/polls/index.html
+++ b/templates/polls/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 {% block content %} 
-  <h1 class="text-center mb-3">Poll Questions</h1>
+  <h1 class="text-center mb-3">Feedback Questions</h1>
   {% if latest_question_list %}
     {% for question in latest_question_list %}
       <div class="card mb-3">
