--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,10 +3,10 @@
 
 <div class="card text-center">
   <div class="card-body">
-    <h1>Welcome To Changes</h1>
-    <p>This is an example Django polling app</p>
+    <h1>Survey Forum</h1>
+    <p>Click below  to take Survey</p>
     <a class="btn btn-dark" href="{% url 'polls:index' %}">
-        View Available Polls</a
+        All Surveys</a
       >
   </div>
   </div>
