--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -11,3 +11,15 @@
   </div>
   </div>
 {% endblock %}
+{% block survey%}
+
+<div class="card text-center">
+  <div class="card-body">
+    <h1>Survey Forum</h1>
+    <p>Click below  to take Survey</p>
+    <a class="btn btn-dark" href="{% url 'polls:index' %}">
+        All Surveys</a
+      >
+  </div>
+  </div>
+{% endblock %}
