--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-dark bg-primary mb-4">
-	<div class="container">
-		<a class="navbar-brand" href="/">Survey</a>
+<nav class="navbar navbar-dark bg-secondary mb-4">
+	<div class="container" >
+		<a class="navbar-brand" href="/" >Survey</a>
 		<a class="navbar-brand" href="/about">About Us</a>
 		<a class="navbar-brand" href="/contact">Contact</a>
 	</div>
