--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -4,7 +4,7 @@
 <div class="card text-center">
   <div class="card-body">
     <h1>Survey Forum</h1>
-    <p>Click below  to take Survey</p>
+    <p>Click below for the Survey</p>
     <a class="btn btn-dark" href="{% url 'polls:index' %}">
         All Surveys</a
       >
