--- a/templates/polls/about.html
+++ b/templates/polls/about.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<p align="center">Hello about</p>
+<p align="center">SURVEY-FORUM</p>
 <div>
-    div tag
+    Survey Forum is a platform which can be used by company or colleges to conduct any survey . 
 </div>
 {% endblock %}
 
