--- a/templates/polls/contact.html
+++ b/templates/polls/contact.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<p align="center">Hello about contact</p>
+<p align="center">COntact us Below:</p>
 <div>
-    div tag
+    You can contact me directly by mailing me : vipiny070@gmail.com
+    Phone number : 0899613522
 </div>
 
 
