--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,7 +3,7 @@
 
 <div class="card text-center">
   <div class="card-body">
-    <h1>Survey Forums</h1>
+    <h1>Survey Forum</h1>
     <p>Click below To Take Survey</p>
     <a class="btn btn-dark" href="{% url 'polls:index' %}">
         All Surveys</a
